Fix/centered title & Truncate longer page-titles (#781)
* fix(page): truncate of toolbar-title

* fix(page): remove margin-left on centered page-titles

* :lipstick: Truncate slotted custom title

* :pencil: Add custom title example

* :pencil: :fire: Clean up advanced example

--- a/src/kirby/components/page/page.component.scss
+++ b/src/kirby/components/page/page.component.scss
@@ -22,6 +22,17 @@ ion-toolbar {
   ion-buttons[slot='secondary'] {
     order: 6;
   }
+
+  ion-title {
+    .toolbar-title {
+      @include slotted('*') {
+        text-overflow: ellipsis;
+        white-space: nowrap;
+        pointer-events: auto;
+        overflow: hidden;
+      }
+    }
+  }
 }
 
 .hide {
@@ -64,6 +75,7 @@ ion-back-button {
 
   &.text-center {
     text-align: center;
+    margin-left: 0;
   }
 
   &.text-right {
